fix nav bar and content spacing

--- a/src/index.css
+++ b/src/index.css
@@ -113,23 +113,16 @@ a:hover,
 }
 
 #outer {
-  /* border:1px solid black; */
   display: flex;
-  flex-grow: 1;
-  flex-direction: row;
-  min-height: calc(50vh/3);
-  /* flex-basis: calc(100%/3); */
+  justify-content: center;
   align-items: center;
+  height: 300px;
 }
 
 #inner {
-  /* border:1px solid red; */
   display: flex;
-  flex-grow: 1;
-  flex-direction: row;
-  flex-basis: calc(100%/3);
-  align-items: flex-start;
-  flex-shrink: 10;
+  align-items: center;
+  max-width: 800px;
 }
 
 #blog_header_card {
@@ -164,13 +157,17 @@ a:hover,
   justify-content: space-between;
 }
 
+
 #nav_bar {
-  /* border: 1px solid #9BB1FF; */
-  text-align: right;
-  max-width: max-content;
-  margin-right: 5vh;
-  flex-grow: 3;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  justify-content: flex-end;
   line-height: 35px;
+  text-align: right;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-right: 20px;
 }
 
 .nav_element {
@@ -178,9 +175,10 @@ a:hover,
 }
 
 #content {
-  flex-grow: 7;
   max-height: max-content;
-  /* border: 1px solid black; */
+  flex: 1;
+  width: 600px;
+  padding-left: 20px;
 }
 
 .clickable,
